# TeslaUI

./: CMakeLists.txt  LICENSE  Main.qml  README.md  Resource.qrc  main.cpp
Controllers/: appcontroller.cpp  appcontroller.h  audiocontroller.cpp  audiocontroller.h  hvachandler.cpp  hvachandler.h  system.cpp  system.h
Models/: AppInfo.h  AppTypes.h  Applistmodel.cpp  Applistmodel.h
Resources/: Icons.qrc
ui/Apps/: ArcadeView.qml  CameraView.qml  MapView.qml  PhoneListView.qml  SpotifyView.qml  TheaterView.qml
ui/BottomBar/: BottomBar.qml
ui/Components/: ApptabComponent.qml  HVACComponent.qml  NavigationSearchBox.qml  NavigationShortcut.qml  VehicleActionButton.qml  VolumeControlComponent.qml
ui/LeftScreen/: LeftScreen.qml
ui/Pages/LeftScreen/: MusicPage.qml  TirePressurePage.qml  TripInfoPage.qml
ui/RightScreen/: RightScreen.qml
ui/Views/: BottomBar.qml  LeftScreen.qml  RightScreen.qml
